@@ -1,3 +1,8 @@
+2005-03-05 13:13  antirez
+
+	* ChangeLog, jim-posix.c: extern int errno declaration removed from
+	  the posix extension.
+
 2005-03-05 11:45  patthoyts
 
 	* jim.c, jim.h: Added Jim_GetAssocData api. This for permitting
